Add elastic module

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "None",
   "dependencies": {
     "csv-reader": "^1.0.3",
+    "elasticsearch": "^15.0.0",
     "graphlib": "^2.1.5",
     "mocha": "^5.2.0",
     "rdfstore": "^0.9.17"
