Add submodule with evaluation for data

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "benchmark/rodi"]
 	path = benchmark/rodi
 	url = git@github.com:giuseppefutia/rodi.git
+[submodule "data/evaluation/jws-knowledge-graphs-2015"]
+	path = data/evaluation/jws-knowledge-graphs-2015
+	url = https://github.com/giuseppefutia/jws-knowledge-graphs-2015
