Tested steiner tree algorithm

--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
   "devDependencies": {},
   "scripts": {
     "test": "mocha test/*/*.js",
-    "test-kg": "mocha test/knowledge_graph_generation/*.js"
+    "test-graph": "mocha test/semantic_modeling/*.js",
+    "test-kg": "mocha test/knowledge_graph_generation/*.js",
+    "test-steiner": "mocha test/steiner/*.js"
   },
   "repository": {
     "type": "git",
