--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
   "scripts": {
     "test": "mocha test/*/*.js",
     "test-graph": "mocha test/semantic_modeling/*.js",
-    "test-kg": "mocha test/knowledge_graph_generation/*.js",
-    "test-steiner": "mocha test/steiner/*.js"
+    "test-steiner": "mocha test/steiner/*.js",
+    "test-jarql": "mocha test/jarql/*.js"
   },
   "repository": {
     "type": "git",
