--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "semantic_modeling/lib/jarql"]
-	path = semantic_modeling/lib/jarql
+	path = libs/jarql
 	url = git@github.com:giuseppefutia/jarql.git
+[submodule "libs/rodi"]
+	path = libs/rodi
+	url = https://github.com/giuseppefutia/rodi
