--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
-[submodule "semantic_modeling/lib/jarql"]
+[submodule "libs/jarql"]
 	path = libs/jarql
-	url = git@github.com:giuseppefutia/jarql.git
+	url = https://github.com/giuseppefutia/jarql
 [submodule "libs/rodi"]
 	path = libs/rodi
 	url = https://github.com/giuseppefutia/rodi
