--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,6 @@
-before_install:
-    - sudo apt update
-    - sudo apt-get install build-essential
-
-# safelist
-branches:
-  only:
-  - master
-
-matrix:
-  include:
-    - language: python
-    # command to install dependencies
-    install:
-        - pip install -r requirements.txt
+language: python
+python:
+  - "3.6"      # current default Python on Travis CI
+# command to install dependencies
+install:
+  - pip install -r requirements.txt
