--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,9 @@
-language: python
-python:
-  - "3.6"      # current default Python on Travis CI
-# command to install dependencies
-install:
-  - pip install -r requirements.txt
+sudo: required
+dist: trusty
+matrix:
+    include:
+        language: python
+        python:
+            - "3.6"
+        install:
+            - pip install -r requirements.txt
