--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,14 @@
-language: python
-python:
-    - "3.6"
-node_js:
-    - 11.15.0
-install:
-    - pip install -r requirements.txt
-    - npm install
+dist: trusty
+sudo: required
+matrix:
+  include:
+      - language: python
+        python:
+            - "3.6"
+        before_script:
+            - pip install -r requirements.txt
+      - language:
+        node_js:
+            - 11.15.0
+        before_script:
+            - npm install
