--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ matrix:
             - "3.6"
         install:
             - pip install -r requirements.txt
-      - language:
+      - language: node_js
         node_js:
             - 11.15.0
         install:
