--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
         "csvjson": "^5.1.0",
         "elasticsearch": "^16.4.0",
         "graphlib": "github:giuseppefutia/graphlib#edge-weight",
+        "graphlib-dot": "^0.6.2",
         "package.json": "^2.0.1",
         "rdfstore": "^0.9.17",
         "sqlite3": "^4.1.0",
