--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "graphlib-dot": "^0.6.2",
         "package.json": "^2.0.1",
         "rdfstore": "^0.9.17",
+        "sparqljs": "^3.0.0",
         "sqlite3": "^4.1.0",
         "underscore": "^1.9.1",
         "xml2json": "^0.11.2"
