--- a/data/taheriyan2016/museum-crm/semantic_types/auto/s29-gilcrease_st.json
+++ b/data/taheriyan2016/museum-crm/semantic_types/auto/s29-gilcrease_st.json
@@ -1,26 +1,44 @@
 [
     {
         "attributes": [
+            "Attribution_URI",
             "Description",
+            "Object_URI",
             "Title",
             "Dated",
             "Dimensions",
+            "Culture_URI",
             "Culture",
+            "Type_URI",
             "Object Name",
+            "Medium_URI",
             "Medium",
+            "Attribution_Appellation_URI",
             "Attribution"
         ],
         "entities": [
             1,
+            1,
+            2,
             1,
             1,
             1,
             1,
             2,
             3,
-            1
+            4,
+            5,
+            6,
+            1,
+            2
         ],
         "uris": [
+            false,
+            false,
+            false,
+            false,
+            false,
+            false,
             false,
             false,
             false,
@@ -32,7 +50,13 @@
         ],
         "semantic_types": [
             [
+                "crm:E21_Person***http://isi.edu/integration/karma/dev#classLink"
+            ],
+            [
                 "crm:E22_Man-Made_Object***crm:P3_has_note"
+            ],
+            [
+                "crm:E22_Man-Made_Object***http://isi.edu/integration/karma/dev#classLink"
             ],
             [
                 "crm:E35_Title***rdfs:label"
@@ -44,13 +68,25 @@
                 "crm:E54_Dimension***crm:P3_has_note"
             ],
             [
-                "crm:E55_Type***rdfs:label"
+                "crm:E55_Type***http://isi.edu/integration/karma/dev#classLink"
             ],
             [
                 "crm:E55_Type***rdfs:label"
             ],
             [
+                "crm:E55_Type***http://isi.edu/integration/karma/dev#classLink"
+            ],
+            [
                 "crm:E55_Type***rdfs:label"
+            ],
+            [
+                "crm:E55_Type***http://isi.edu/integration/karma/dev#classLink"
+            ],
+            [
+                "crm:E55_Type***rdfs:label"
+            ],
+            [
+                "crm:E82_Actor_Appellation***http://isi.edu/integration/karma/dev#classLink"
             ],
             [
                 "crm:E82_Actor_Appellation***rdfs:label"
