Improve automation in semantic types

--- a/data/taheriyan2016/task_one/semantic_types/auto/s29-gilcrease_st.json
+++ b/data/taheriyan2016/task_one/semantic_types/auto/s29-gilcrease_st.json
@@ -33,19 +33,19 @@
             2
         ],
         "uris": [
+            true,
+            false,
+            true,
             false,
             false,
             false,
+            true,
             false,
+            true,
             false,
+            true,
             false,
-            false,
-            false,
-            false,
-            false,
-            false,
-            false,
-            false,
+            true,
             false
         ],
         "semantic_types": [
