--- a/data/taheriyan2016/task_one/semantic_types/updated/s29-gilcrease_st.json
+++ b/data/taheriyan2016/task_one/semantic_types/updated/s29-gilcrease_st.json
@@ -1,34 +1,46 @@
 [{
     "attributes": [
-        "Actor_URI",
+        "Attribution_URI",
+        "Description",
+        "Object_URI",
         "Title",
-        "Begin Date",
-        "End Date",
         "Dated",
         "Dimensions",
+        "Culture_URI",
+        "Culture",
+        "Type_URI",
+        "Object Name",
         "Medium_URI",
         "Medium",
-        "Artist_Appellation_URI",
+        "Attribution_Appellation_URI",
         "Attribution"
     ],
     "entities": [
         1,
         1,
+        2,
+        1,
+        1,
+        1,
         1,
         2,
         3,
-        1,
-        1,
-        2,
+        4,
+        5,
+        6,
         1,
         2
     ],
     "uris": [
         true,
         false,
+        true,
         false,
         false,
         false,
+        true,
+        false,
+        true,
         false,
         true,
         false,
@@ -40,19 +52,31 @@
             "crm:E21_Person***rdfs:label"
         ],
         [
+            "crm:E22_Man-Made_Object***crm:P3_has_note"
+        ],
+        [
+            "crm:E22_Man-Made_Object***rdfs:label"
+        ],
+        [
             "crm:E35_Title***rdfs:label"
         ],
         [
             "crm:E52_Time-Span***crm:P82_at_some_time_within"
         ],
         [
-            "crm:E52_Time-Span***crm:P82_at_some_time_within"
-        ],
-        [
-            "crm:E52_Time-Span***crm:P82_at_some_time_within"
-        ],
-        [
             "crm:E54_Dimension***crm:P3_has_note"
+        ],
+        [
+            "crm:E55_Type***rdfs:label"
+        ],
+        [
+            "crm:E55_Type***rdfs:label"
+        ],
+        [
+            "crm:E55_Type***rdfs:label"
+        ],
+        [
+            "crm:E55_Type***rdfs:label"
         ],
         [
             "crm:E55_Type***rdfs:label"
