--- a/data/taheriyan2016/task_03/semantic_types/auto/s29-gilcrease_st.json
+++ b/data/taheriyan2016/task_03/semantic_types/auto/s29-gilcrease_st.json
@@ -12,15 +12,15 @@
             "Description"
         ],
         "entities": [
-            1,
-            1,
-            2,
-            3,
-            4,
-            5,
-            6,
-            1,
-            7
+            "1",
+            "1",
+            "1",
+            "1",
+            "1",
+            "1",
+            "1",
+            "1",
+            "1"
         ],
         "uris": [
             false,
@@ -35,31 +35,31 @@
         ],
         "semantic_types": [
             [
-                "http://www.w3.org/2008/05/skos#Concept***http://www.w3.org/2008/05/skos#prefLabel"
+                "skos2:Concept***skos2:prefLabel"
             ],
             [
-                "http://www.americanartcollaborative.org/ontology/CulturalHeritageObject***http://www.americanartcollaborative.org/ontology/objectId"
+                "aac-ont:CulturalHeritageObject***aac-ont:objectId"
             ],
             [
-                "http://www.americanartcollaborative.org/ontology/CulturalHeritageObject***http://www.americanartcollaborative.org/ontology/accessionNumber"
+                "aac-ont:CulturalHeritageObject***aac-ont:accessionNumber"
             ],
             [
-                "http://www.americanartcollaborative.org/ontology/CulturalHeritageObject***dcterms:title"
+                "aac-ont:CulturalHeritageObject***dcterms:title"
             ],
             [
-                "http://www.americanartcollaborative.org/ontology/CulturalHeritageObject***dcterms:created"
+                "aac-ont:CulturalHeritageObject***dcterms:created"
             ],
             [
-                "http://www.americanartcollaborative.org/ontology/CulturalHeritageObject***dcterms:extent"
+                "aac-ont:CulturalHeritageObject***dcterms:extent"
             ],
             [
-                "http://www.americanartcollaborative.org/ontology/CulturalHeritageObject***dcterms:medium"
+                "aac-ont:CulturalHeritageObject***dcterms:medium"
             ],
             [
-                "http://www.americanartcollaborative.org/ontology/Person***http://rdvocab.info/ElementsGr2/nameOfThePerson"
+                "aac-ont:Person***ElementsGr2:nameOfThePerson"
             ],
             [
-                "http://www.americanartcollaborative.org/ontology/CulturalHeritageObject***dcterms:description"
+                "aac-ont:CulturalHeritageObject***dcterms:description"
             ]
         ]
     }
