--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,8 @@
-dist: trusty
-sudo: required
-matrix:
-  include:
-      - language: python
-        python:
-            - "3.6"
-        install:
-            - pip install -r requirements.txt
-      - language: node_js
-        node_js:
-            - 11.15.0
-        install:
-            - npm install
+language: python
+python:
+  - "3.6"
+# command to install dependencies
+install:
+  - python setup.py install
+# command to run tests
+script: pytest
